--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -3,11 +3,28 @@
         <h2>Gossip.com</h2>
         <button (click)="onLogout()">logout</button>
     </nav>
+    <div class="search">
+        <form [formGroup]="searchForm" class="searchForm">
+            <input type="text" placeholder="Search" formControlName="search">
+            <button type="submit" (click)="searchMessage()">Search</button>
+        </form>
+    </div>
     <div class="dashboard">
-        <div class="userList">
+        <div class="userList" *ngIf="!showSearchResults">
             <app-userlist></app-userlist>
+        </div>
+        <div class="searchList" *ngIf="showSearchResults">
+            <div class="close" >
+                <i class="fa-solid fa-2x fa-xmark" (click)="onClose()"></i>
+            </div>
+            <div class="messageList" >
+            <li *ngFor=" let message of Messages" [ngClass]="getMessageClasses(message)">
+            {{message.content}}
+            </li>
+        </div>
         </div>
         <div class="conversation">
             <router-outlet name="chatOutlet"></router-outlet>
         </div>
     </div>
+</div>
