--- a/src/app/Components/userlist/userlist.component.html
+++ b/src/app/Components/userlist/userlist.component.html
@@ -2,7 +2,7 @@
 
 <div class="userlist">
     <li *ngFor="let user of users" class="userName">
-        <a [routerLink]="[{ outlets: { chatOutlet: ['conversation', user.id] } }]">{{ user.name }}</a>
+        <a [routerLink]="[{ outlets: { chatOutlet: ['conversation','user', user.id] } }]">{{ user.name }}</a>
     </li>
     
 </div>
