Implemented add,getuserList,send,getmessage

--- a/src/app/Components/group/group.component.html
+++ b/src/app/Components/group/group.component.html
@@ -5,7 +5,7 @@
         <div class="groupList">
             <li *ngFor="let group of groups" class="groupName">
                 <div class="eachGroup">
-               <a [routerLink]="[{outlets: {chatOutlet: ['conversation','group', group.id.toString()]}}]"> {{group.name}}</a>
+               <a [routerLink]="[{outlets: {chatOutlet: ['conversation','group', group.id.toString()]}}]"> {{group.groupName}}</a>
                 </div>
             </li>
         </div>
