--- a/src/app/Components/message-history/message-history.component.css
+++ b/src/app/Components/message-history/message-history.component.css
@@ -88,3 +88,12 @@ i{
     overflow-y: scroll; /* Enable vertical scrolling */
     border: 1px solid #ccc;
   }
+  .addMember{
+    position: fixed;
+    top: 0;
+    margin-top: 605px;
+  }
+  .addMember button{
+    outline: none;
+    padding: 7px;
+  }
