--- a/src/app/Components/user-dialog/user-dialog.component.html
+++ b/src/app/Components/user-dialog/user-dialog.component.html
@@ -1,1 +1,14 @@
-<p>user-dialog works!</p>
+<div class="userList">
+    <h3>Select Members</h3>
+    <div class="selectUsers">
+    <li *ngFor="let user of users" class="userName">
+        <input
+          type="checkbox"
+          (change)="toggleUserSelection(user.id)"
+          [checked]="selectedUsers.includes(user.id)"
+        />
+        {{ user.name }}
+    </li>
+    </div>
+    <button (click)="addMembersToGroup(groupId, selectedUsers)">Add</button>
+</div>
