--- a/src/app/Components/user-dialog/user-dialog.component.html
+++ b/src/app/Components/user-dialog/user-dialog.component.html
@@ -10,6 +10,6 @@
         {{ user.name }}
     </li>
     </div>
-    <button (click)="addMembersToGroup(groupId, selectedUsers)">Manage</button>
+    <button (click)="manageMembersToGroup(groupId, selectedUsers)">Manage</button>
 </div>
                                                                           
