--- a/src/app/Components/group/group.component.html
+++ b/src/app/Components/group/group.component.html
@@ -3,7 +3,7 @@
        <p> <i class="fa-solid fa-plus"></i>Group</p>
     </div>
         <div class="groupList">
-            <li *ngFor="let group of groups" class="groupName">
+            <li *ngFor="let group of groups" class="groupName" [routerLinkActive]="'active'">
                 <div class="eachGroup">
                <a [routerLink]="[{outlets: {chatOutlet: ['conversation','group', group.id.toString()]}}]"> {{group.groupName}}</a>
               
