--- a/src/app/Components/user-dialog/user-dialog.component.html
+++ b/src/app/Components/user-dialog/user-dialog.component.html
@@ -10,6 +10,12 @@
         {{ user.name }}
     </li>
     </div>
+    <div class="includePreviousChat">
+      <label>
+        Include Previous Chat
+        <input type="checkbox" [(ngModel)]="includePreviousChat" />
+      </label>
+    </div>
     <button (click)="manageMembersToGroup(groupId, selectedUsers)">Manage</button>
 </div>
                                                                           
